--- a/app/src/main/res/layout/categories_view_holder.xml
+++ b/app/src/main/res/layout/categories_view_holder.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/_10sdp"
+    android:layout_width="wrap_content">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/category_img"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_100sdp"
         android:scaleType="centerCrop"
         android:src="@drawable/food"
         app:layout_constraintLeft_toLeftOf="parent"
