--- a/app/src/main/res/drawable/rectangle_border_fill.xml
+++ b/app/src/main/res/drawable/rectangle_border_fill.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <stroke
-        android:width="0.5dp"
-        android:color="@color/black"/>
+<!--    <stroke-->
+<!--        android:width="0.5dp"-->
+<!--        android:color="@color/black"/>-->
     <solid android:color="@color/green_700"/>
     <corners android:radius="@dimen/_5sdp"/>
 
