--- a/app/src/main/res/layout/categories_view_holder.xml
+++ b/app/src/main/res/layout/categories_view_holder.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_10sdp"
-    android:layout_width="wrap_content">
+    android:padding="@dimen/_10sdp">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/category_img"
+        android:id="@+id/rv_category_img"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"
         android:scaleType="centerCrop"
@@ -23,9 +23,9 @@
         android:text="Herbs"
         android:textColor="@color/black"
         android:textSize="@dimen/_16sdp"
-        app:layout_constraintEnd_toEndOf="@+id/category_img"
-        app:layout_constraintStart_toStartOf="@+id/category_img"
-        app:layout_constraintTop_toBottomOf="@+id/category_img" />
+        app:layout_constraintEnd_toEndOf="@+id/rv_category_img"
+        app:layout_constraintStart_toStartOf="@+id/rv_category_img"
+        app:layout_constraintTop_toBottomOf="@+id/rv_category_img" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
