--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="light_gray">#DCE2EA</color>
     <color name="orange">#FFCA83</color>
     <color name="pista">#DAF6E8</color>
+    <color name="blue">#99e6ff</color>
+    <color name="blue2">#86BFD2</color>
 </resources>
