--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -32,7 +32,7 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">@dimen/_11sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
         <item name="android:paddingTop">@dimen/_16sdp</item>
