--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -10,12 +10,12 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
-
         <EditText
             android:id="@+id/search_bar"
             style="@style/regular_font_family"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_5sdp"
             android:background="@drawable/border"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="@dimen/_5sdp"
@@ -24,18 +24,37 @@
             android:padding="@dimen/_5sdp"
             android:singleLine="true"
             android:textSize="@dimen/_11sdp"
-            android:layout_marginHorizontal="@dimen/_5sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-        <TextView
-            android:layout_width="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_category"
-            app:layout_constraintTop_toBottomOf="@+id/search_bar"
-            android:text="@string/categories"
+            android:padding="@dimen/_10sdp"
+            app:layout_constraintTop_toBottomOf="@+id/search_bar">
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/categories"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14sdp"
+                app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rv_category"
+                app:layout_constraintTop_toBottomOf="@+id/tv_category"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal"
+                tools:listitem="@layout/categories_view_holder"
+                />
 
-            android:textColor="@color/black"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
